Test bug: test library and flags in TestHeapAlloc